--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
+html {
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0px;
+  height: 100%;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  align-content: space-around;
+}
+
+body, .example h1, .example p, .example .button {
+  transition: all .2s ease-in-out;
+}
+
+body.light-theme {
+  background-color: #151515;
+}
+
+body.light-theme .example h1 {
+  color: #FFFFFF;
+}
+
+body.light-theme .example p {
+  color: #FFFFFF;
+}
+
+body.light-theme .buttons .button {
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+}
+
+body.light-theme .buttons .button:hover {
+  color: #151515;
+  background-color: #FFFFFF;
+}
+
+.video-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video-back {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.counter-wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#background-video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.logo-wrapper {
+  position: absolute;
+  /* width: 100%; */
+  /* height: 100%; */
+}
+
+.logo-wrapper>.logo-image {
+  margin-left: 30px;
+  margin-top: 20px;
+  width: 20%;
+  /* height: 20%; */
+}
+
+.logo-wrapper>.logo {
+  margin-left: 30px;
+  margin-top: 20px;
+  width: 20%;
+  /* height: 20%; */
+}
+
+.logo-wrapper>.logo-image {
+  margin-left: 30px;
+  margin-top: 20px;
+  width: 20%;
+}
+
+
+@media screen and (max-width: 480px) {
+  .logo-wrapper>.logo-image {
+    margin-left: 30px;
+    margin-top: 50px;
+    /* width: 40%; */
   }
 }
