--- a/src/App.css
+++ b/src/App.css
@@ -66,35 +66,30 @@ body.light-theme .buttons .button:hover {
 
 .logo-wrapper {
   position: absolute;
-  /* width: 100%; */
-  /* height: 100%; */
+  width: 100%;
+  height: 100%;
 }
 
-.logo-wrapper>.logo-image {
+.img-wrapper {
+  display: flex;
+  align-items: center;
   margin-left: 30px;
-  margin-top: 20px;
-  width: 20%;
-  /* height: 20%; */
 }
 
-.logo-wrapper>.logo {
-  margin-left: 30px;
-  margin-top: 20px;
-  width: 20%;
-  /* height: 20%; */
+.img-wrapper .logo-icon {
+  width: 80px;
+  height: 80px;
+  margin-right: 30px;
 }
 
-.logo-wrapper>.logo-image {
-  margin-left: 30px;
-  margin-top: 20px;
-  width: 20%;
+.img-wrapper .logo-text {
+  width: 120px;
+  height: 120px;
+  margin-right: 30px;
 }
-
 
 @media screen and (max-width: 480px) {
-  .logo-wrapper>.logo-image {
-    margin-left: 30px;
-    margin-top: 50px;
-    /* width: 40%; */
+  .img-wrapper {
+    margin-top: 30px;
   }
 }
